--- a/src/components/Calendar/styles.module.scss
+++ b/src/components/Calendar/styles.module.scss
@@ -1,12 +1,20 @@
 .table {
     text-align: center;
     border-collapse: collapse;
+    margin: calc(var(--padding, .5rem) / -2);
 }
 
 .td {
-    button {
-        aspect-ratio: 1;
-        width: 100%;
+
+    padding: calc(var(--padding, .5rem) / 2);
+
+    strong {
+        font-size: 1rem !important;
+        height: 1lh;
+        width: 1lh;
+        line-height: 1lh;
+        margin: 0 !important;
+        padding: 0 !important;
     }
 
     &[aria-current] {
