--- a/src/components/Icon/styles.module.scss
+++ b/src/components/Icon/styles.module.scss
@@ -4,14 +4,17 @@
     display: inline-flex;
     flex-shrink: 0;
     min-width: 0;
-    box-sizing: content-box;
+    // box-sizing: content-box;
     align-items: center;
+    text-align: center;
+    justify-content: center;
     pointer-events: none;
     font-family: 'Material Icons Outlined';
     font-weight: normal;
     font-style: normal;
-    font-size: 1.5em;
+    transform: scale(1.25);
     line-height: 1lh;
+    width: 1lh;
     height: 1lh;
     letter-spacing: normal;
     text-transform: none;
